project graph bilingual, almost completed

--- a/css/project-graph.css
+++ b/css/project-graph.css
@@ -5,26 +5,19 @@
   --nodeBorder: #27E;
 }
 
-.viz-buttons button:active {
-	background-color: var(--node2);
-	box-shadow: box-shadow:
-	  7px 6px 28px 1px rgba(0, 0, 0, 0.5);
-	transform: translateY(4px);
-	/* Moving button 4px to y-axis */
-	}
-
 #viz {
 	background-color: White;
 	}
 
-.viz-buttons {
-	vertical-align: top;
-    }
+.viz-buttons button:active {
+	background-color: var(--node2);
+	transform: translateY(4px);		/* Moving button 4px y-axis */
+	}
 
 .viz-buttons div {
-	display: inline-block;
+	display: inline-flex;
 	color: white;
-	text-align: center;
+    line-height: 82px;
 	/* padding: 5px; */
     }
 
@@ -34,19 +27,11 @@
 
 .viz-buttons button {
 	/* width: 70px; */
-	/* height: 40px; */
+	/* height: 80px; */
 	background-color: var(--bg);
 	font-size: 30px;
 	border-radius: 10px;
 	border:2px solid Black;
-	}
-
-.viz-buttons p {
-	font-size: 30px;
-	}
-
-.viz-buttons span {
-	font-size: 20px;
 	}
 
 #Node12, #Edge {
