--- a/css/project-graph.css
+++ b/css/project-graph.css
@@ -76,3 +76,42 @@ label[disabled] {
 #number, input[type='number'] {
 	width: 4em;
 }
+
+/* The Modal (background) */
+.modal {
+	display: none; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	padding-top: 200px; /* Location of the box */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: White; /* Fallback color */
+	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+	background-color: White;
+	margin: auto;
+	padding: 20px;
+	border: 1px solid Black;
+	width: 40%;
+}
+
+/* The Close Button */
+.close {
+	color: #333;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+	color: #000;
+	text-decoration: none;
+	cursor: pointer;
+}
