vote per node, partial success

--- a/css/project-graph.css
+++ b/css/project-graph.css
@@ -117,7 +117,7 @@ textarea {
 	float: right;
 }
 
-/************** Modal Window for asking user inputs *************/
+/*************** Modal Windows for asking user inputs *************/
 
 /* The Modal (background) */
 .modal {
