--- a/css/project-graph.css
+++ b/css/project-graph.css
@@ -179,8 +179,9 @@ input[type='author'][disabled] {
 .close {
 	color: #F00;
 	float: right;
-	font-size: 15px;
+	font-size: 18px;
 	font-weight: bold;
+	margin-left: 5px;
 }
 
 .close:hover,
